tests/valid/two-statements.nyx
let x = 10
const Y = 20
