tests/invalid/function-inconsistent-body.nyx
fn broken() -> ok:
    let x = 10
   let y = 20
    const Z = 30
